--- a/styles.css
+++ b/styles.css
@@ -100,11 +100,10 @@ main {
 }
 
 .mission-statement {
-    position: absolute;
-    top: 1rem;
     text-align: center;
     color: #3B3964;
     width: 100%;
+    margin-bottom: 2rem; /* Add margin bottom to create space */
 }
 
 .mission-statement p {
@@ -121,7 +120,6 @@ main {
     gap: 1rem;
     max-width: 1200px;
     width: 100%;
-    margin-top: .1rem;
 }
 
 .focal-item {
@@ -244,7 +242,11 @@ footer {
     }
 
     .mission-statement p {
-        font-size: 1.5rem;
+        font-size: 2rem;
+    }
+
+    .focal-area {
+        margin-top: 2rem; /* Adjust space above focal components on small screens */
     }
 }
 
