--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    line-height: 1.6;
+    line-height: 1.2;
     font-size: 16px;
     height: 100%;
     color: #3B3964;
@@ -76,12 +76,12 @@ header {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin: 0; /* Remove any margin */
 }
 
 .logo img.logo-img {
     width: 60px;
-    margin-bottom: 0.5rem;
-    border: none;
+    margin-bottom: 0.1rem;
 }
 
 .logo a {
@@ -95,8 +95,7 @@ header {
 .logo p.logo-text {
     margin: 0;
     font-weight: bold;
-    font-size: 1rem;
-    text-decoration: none;
+    font-size: .8rem;
 }
 
 nav {
@@ -159,7 +158,6 @@ main {
     font-weight: bold;
     max-width: 800px;
     margin: 0 auto;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -219,6 +217,28 @@ a {
     gap: 1rem;
     justify-content: center;
     width: 100%;
+}
+.posts-container ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.posts-container li {
+    margin-bottom: 0.5rem; /* Adjust spacing between list items as needed */
+}
+/* Change link color to become darker on hover */
+.posts-container a {
+    color: #3ABFEF; /* Original link color */
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.posts-container a:hover {
+    color: #004080; /* Darker color for hover state */
 }
 
 .post-thumbnail {
@@ -393,6 +413,7 @@ a {
 /* Footer Styles */
 footer {
     text-align: center;
+    font-weight: bold;
     padding: 1rem;
 }
 
