--- a/styles.css
+++ b/styles.css
@@ -283,8 +283,8 @@ a {
     color: rgba(255, 255, 255, 0.8);
     width: 90vw;
     height: 90vw;
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 400px;
+    max-height: 400px;
     margin: 2rem auto;
     background-color: rgba(59, 57, 100, 0.8);
     border-radius: 50%;
@@ -327,12 +327,16 @@ a {
     max-width: 1400px;
     margin: 2rem auto;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .infographic {
-    width: 100%;
-    height: auto;
-    max-width: 100%;
+    width: auto; /* Adjust width to auto */
+    max-width: 100%; /* Ensure it does not exceed the container width */
+    height: auto; /* Maintain the aspect ratio */
+    min-width: 800px; /* Set a minimum width to prevent it from becoming too small */
 }
 
 /* Contact page specific styles */
